<resources>
    <string name="app_name">RepoFetcher</string>
    <string name="search">Search</string>
    <string name="go_my_repositories_label">Go to my repositories</string>
    <string name="to_search_label">to search for an account</string>
    <string name="to_add_label">to add an account</string>
    <string name="login_center">Login Center</string>
    <string name="login_center_label">Go to Login Center</string>
    <string name="chose_account_label">Choose account</string>
    <string name="network_error_label">Please, make sure you have internet connection and try again.</string>
    <string name="unexpected_error_label">Something wrong occurred, please try again.</string>
    <string name="retry_label">Retry</string>

    <string name="github">GitHub</string>
    <string name="bitbucket">Bitbucket</string>

    <string name="github_base_url">https://api.github.com/</string>
    <string name="github_client_id">6ad10b7063dcf95b3eaa</string>
    <string name="github_client_secret">7d511821d6c8a50e1cb44f34926eb3cc613d7273</string>
    <string name="github_authorization_url">https://github.com/login/oauth/authorize</string>
    <string name="github_exchange_token_url">https://github.com/login/oauth/access_token</string>

    <string name="bitbucket_base_url">https://api.bitbucket.org/2.0/</string>
    <string name="bitbucket_client_id">D9W2k84m3z34ygLXdx</string>
    <string name="bitbucket_client_secret">wFKVBB52nrsNWT8XTzvPM6gfWBfBcVYe</string>
    <string name="bitbucket_authorization_url">https://bitbucket.org/site/oauth2/authorize</string>
    <string name="bitbucket_exchange_token_url">https://bitbucket.org/site/oauth2/access_token</string>

    <!--Accessibility-->
    <string name="error_image_description">Error image</string>
    <string name="owner_avatar_description">Owner avatar</string>
</resources>